fix overflow

--- a/vizro-core/examples/scratch_dev/assets/css/custom.css
+++ b/vizro-core/examples/scratch_dev/assets/css/custom.css
@@ -33,3 +33,7 @@
 .collapsible-container-header .material-symbols-outlined:hover {
   color: var(--text-primaryHover);
 }
+
+.collapsible-container {
+  height: 100%;
+}
